Fix for input "text" shift down in Chrome

--- a/themes/Three_point_5/Shore/style.css
+++ b/themes/Three_point_5/Shore/style.css
@@ -164,6 +164,9 @@ p{
 	background: rgba(62,59,57,0.5);
 	padding:0;
 }
+#search div{
+	display: flex;
+}
 #search input{
 	height:14px;
 	padding: 8px;
